# MS7210

./: CMakeLists.txt  README.md  build.sh
others/version/: version.h.in
src/: main.cpp  ms7210.h  ms7210_wrap.c  ms7210_wrap.h
